--- a/public/index.html
+++ b/public/index.html
@@ -844,7 +844,8 @@
         </div>
 		<div class="col-lg-8 mb-3 mt-3">
 		
-      <form name="newsletter" id="newsletter" method="POST" netlify-honeypot="bot-field" netlify>
+      <!-- <form name="newsletter" id="newsletter" method="POST" netlify-honeypot="bot-field" netlify> -->
+      <form name="contact" method="POST" netlify>
         <p class="hidden">
           <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
         </p>
