--- a/public/index.html
+++ b/public/index.html
@@ -119,11 +119,11 @@
                   the best decisions for your offshoring initiative and ensure success!
                 </p>
                  <div class="btn-wrapper">
-                  <a role="button" data-toggle="modal" data-target="#modal-freeconsultation" class="btn btn-white btn-icon mb-3 mb-sm-0">
+                  <a role="button" data-toggle="modal" data-target="#modal-whatisoffshoring" class="btn btn-white btn-icon mb-3 mb-sm-0">
                     <span class="btn-inner--icon"><i class="fal fa-angle-right"></i></span>
                     <span class="btn-inner--text">What is offshoring?</span>
                   </a>
-                  <a role="button" data-toggle="modal" data-target="#modal-freeconsultation" class="btn btn-white btn-icon mb-3 mb-sm-0">
+                  <a role="button" data-toggle="modal" data-target="#modal-whoshouldoffshore" class="btn btn-white btn-icon mb-3 mb-sm-0">
                       <span class="btn-inner--icon"><i class="fal fa-angle-right"></i></span>
                       <span class="btn-inner--text">Who should offshore?</span>
                     </a>
@@ -266,6 +266,44 @@
     </section>
 	
   <!-- MODALS -->
+
+	<div class="modal fade" id="modal-whatisoffshoring" tabindex="-1" role="dialog" aria-labelledby="modal-whatisoffshoring" aria-hidden="true">
+	  <div class="modal-dialog modal-lg modal-dialog-centered modal-" role="document">
+		<div class="modal-content">
+		  <div class="modal-header">
+			<h6 class="modal-title" id="modal-title-default">What is Offshoring?</h6>
+			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			  <span aria-hidden="true">×</span>
+			</button>
+		  </div>
+		  <div class="modal-body">
+			<p>TBA</p>
+		  </div>
+		  <div class="modal-footer">
+			<button type="button" class="btn btn-outline-primary  ml-auto" data-dismiss="modal">Got it!</button>
+		  </div>
+		</div>
+	  </div>
+  </div>
+  
+	<div class="modal fade" id="modal-whoshouldoffshore" tabindex="-1" role="dialog" aria-labelledby="modal-whoshouldoffshore" aria-hidden="true">
+	  <div class="modal-dialog modal-lg modal-dialog-centered modal-" role="document">
+		<div class="modal-content">
+		  <div class="modal-header">
+			<h6 class="modal-title" id="modal-title-default">Who Should Offshore?</h6>
+			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			  <span aria-hidden="true">×</span>
+			</button>
+		  </div>
+		  <div class="modal-body">
+			<p>TBA</p>
+		  </div>
+		  <div class="modal-footer">
+			<button type="button" class="btn btn-outline-primary  ml-auto" data-dismiss="modal">Got it!</button>
+		  </div>
+		</div>
+	  </div>
+	</div>
   
 	<div class="modal fade" id="modal-freeconsultation" tabindex="-1" role="dialog" aria-labelledby="modal-freeconsultation" aria-hidden="true">
 	  <div class="modal-dialog modal-lg modal-dialog-centered modal-" role="document">
@@ -674,7 +712,7 @@
                     <input id="type" name="type" value="TRELLO" type="hidden">
 				
                     <div id="trello-form">
-                      
+
                       <div class="form-group mt-3">
                         <div class="input-group input-group-alternative">
                         <div class="input-group-prepend">
