Fix big buttons

--- a/public/index.html
+++ b/public/index.html
@@ -264,10 +264,6 @@
         </div>
       </div>
 	  
-
-	  
-
-	  
     </section>
 	
   <!-- MODALS -->
@@ -479,7 +475,7 @@
           </div>
           <div class="modal-footer">
             <a href="https://calendly.com/chriswb/coffee" target="_blank" class="btn btn-white">
-              <i class="fal fa-calendar-alt"></i> Book your free consult now!
+              <i class="fal fa-calendar-alt"></i> Free Consult!
             </a>
             <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal">Close</button>
           </div>
@@ -529,7 +525,7 @@
           </div>
           <div class="modal-footer">
             <a href="https://calendly.com/chriswb/coffee" target="_blank" class="btn btn-white">
-              <i class="fal fa-calendar-alt"></i> Book your free consult now!
+              <i class="fal fa-calendar-alt"></i> Free Consult!
             </a>
             <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal">Close</button>
           </div>
@@ -571,7 +567,7 @@
           </div>
           <div class="modal-footer">
             <a href="https://calendly.com/chriswb/coffee" target="_blank" class="btn btn-white">
-              <i class="fal fa-calendar-alt"></i> Book your free consult now!
+              <i class="fal fa-calendar-alt"></i> Free Consult!
             </a>
             <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal">Close</button>
           </div>
@@ -623,7 +619,7 @@
           </div>
           <div class="modal-footer">
             <a href="https://calendly.com/chriswb/coffee" target="_blank" class="btn btn-white">
-              <i class="fal fa-calendar-alt"></i> Book your free consult now!
+              <i class="fal fa-calendar-alt"></i> Free Consult!
             </a>
             <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal">Close</button>
           </div>
@@ -674,7 +670,7 @@
           </div>
           <div class="modal-footer">
             <a href="https://calendly.com/chriswb/coffee" target="_blank" class="btn btn-white">
-              <i class="fal fa-calendar-alt"></i> Book your free consult now!
+              <i class="fal fa-calendar-alt"></i> Free Consult!
             </a>
             <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal">Close</button>
           </div>
@@ -730,7 +726,7 @@
           </div>
           <div class="modal-footer">
             <a href="https://calendly.com/chriswb/coffee" target="_blank" class="btn btn-white">
-              <i class="fal fa-calendar-alt"></i> Book your free consult now!
+              <i class="fal fa-calendar-alt"></i> Free Consult!
             </a>
             <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal">Close</button>
           </div>
