Newsletter Opt-in

--- a/public/index.html
+++ b/public/index.html
@@ -808,9 +808,10 @@
           <div class="col-lg-8">
             <h2 class="display-3"><span>Want to get started with a</span> FREE Trello Plan?</span></h2>
             <p class="lead text-muted">
-				We have created a trello board with everything you need to do to manage your offshoring initiative effectively.
-				You will be granted admin rights to your own board with lists, labels & over <b>50 cards</b> representing an action or
-				task that you should complete</p>
+              We have created a trello board with everything you need to do to manage your offshoring initiative effectively.
+              You will be granted admin rights to your own board with lists, labels & over <b>50 cards</b> representing an action or
+              task that you should complete
+            </p>
           </div>
         </div>
 		
@@ -862,6 +863,12 @@
                         <input class="form-control" placeholder="Email address" id="trello-email" name="trello-email"  type="email">
                         </div>
                       </div>
+                      <div class="custom-control custom-checkbox mb-3">
+                        <input class="custom-control-input" id="trello-newsletter-signup" type="checkbox" checked>
+                        <label class="custom-control-label" for="trello-newsletter-signup">
+                          <span>Sign up for our newsletter</span>
+                        </label>
+                      </div>
                       <div>
                         <button type="submit" class="btn btn-neutral btn-round btn-block btn-lg">Get it now!</button>
                       </div>
@@ -890,9 +897,10 @@
         <div class="row text-center justify-content-center">
           <div class="col-lg-10">
             <h2 class="display-3 text-white">Build something amazing!</h2>
-            <p class="lead text-white">You may have gathered that we are passionate about the difference that offshoring can make to organisations and the people they hire, but you truly
-			have an opportunity to create something that you will reflect on as a turning point in your organisations lifecycle
-			</p>
+            <p class="lead text-white">
+              You may have gathered that we are passionate about the difference that offshoring can make to organisations and the people they hire, but you truly
+              have an opportunity to create something that you will reflect on as a turning point in your organisations lifecycle
+            </p>
           </div>
         </div>
         <div class="row row-grid mt-5">
@@ -971,8 +979,14 @@
                       <input class="form-control" id="directrequest-email" name="directrequest-email" placeholder="Email address" type="email" required data-validation-required-message="Please enter your name.">
                       </div>
                     </div>
-                    <div class="form-group mb-4">
+                    <div class="form-group">
                       <textarea class="form-control form-control-alternative" id="notes" name="notes"  rows="4" cols="80" placeholder="Type a message..."></textarea>
+                    </div>
+                    <div class="custom-control custom-checkbox mb-3">
+                      <input class="custom-control-input" id="directrequest-newsletter-signup" type="checkbox" checked>
+                      <label class="custom-control-label" for="directrequest-newsletter-signup">
+                        <span>Sign up for our newsletter</span>
+                      </label>
                     </div>
                     <div>
                       <button type="submit" class="btn btn-default btn-round btn-block btn-lg">Send Message</button>
