--- a/public/index.html
+++ b/public/index.html
@@ -864,7 +864,7 @@
                         </div>
                       </div>
                       <div class="custom-control custom-checkbox mb-3">
-                        <input class="custom-control-input" id="trello-newsletter-signup" type="checkbox" checked>
+                        <input class="custom-control-input" name="trello-newsletter-signup" id="trello-newsletter-signup" type="checkbox" checked>
                         <label class="custom-control-label" for="trello-newsletter-signup">
                           <span>Sign up for our newsletter</span>
                         </label>
@@ -983,7 +983,7 @@
                       <textarea class="form-control form-control-alternative" id="notes" name="notes"  rows="4" cols="80" placeholder="Type a message..."></textarea>
                     </div>
                     <div class="custom-control custom-checkbox mb-3">
-                      <input class="custom-control-input" id="directrequest-newsletter-signup" type="checkbox" checked>
+                      <input class="custom-control-input" name="directrequest-newsletter-signup" id="directrequest-newsletter-signup" type="checkbox" checked>
                       <label class="custom-control-label" for="directrequest-newsletter-signup">
                         <span>Sign up for our newsletter</span>
                       </label>
