--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,25 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Offshoring is a great way to reduce costs, increase diversity, service your customers, create competitive advantage &amp; and make a real difference to the lives of the people that you work with">
-  <meta name="author" content="Change Fox">
   <title>How To Offshore</title>
+
+  <meta name="keywords" content="how to offshore, vietnam bpo, philippines bpo, vietnam, philippines, change fox, offshoring, bpo">
+  <meta name="author" content="Change Fox Pty. Ltd.">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@howtooffshore" />
+  <meta name="twitter:title" content="How To Offshore" />
+  <meta name="twitter:description" content="Offshoring is a great way to reduce costs, increase diversity, service your customers, create competitive advantage &amp; and make a real difference to the lives of the people that you work with" />
+  <meta name="twitter:image" content="https://www.howtooffshore.com/assets/img/brand/default-image.png" />
+
+  <!-- OG -->
+  <meta property="og:title" content="How To Offshore"/>
+  <meta property="og:image" content="https://www.howtooffshore.com/assets/img/brand/default-image.png"/>
+  <meta property="og:site_name" content="How To Offshore"/>
+  <meta property="og:description" content="Offshoring is a great way to reduce costs, increase diversity, service your customers, create competitive advantage &amp; and make a real difference to the lives of the people that you work with"/>
   <!-- Favicon -->
+  <link href="./assets/img/brand/favicon.png" rel=" shortcut icon" type="image/png">
   <link href="./assets/img/brand/favicon.png" rel="icon" type="image/png">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
