--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Offshoring is a great way to reduce costs, increase diversity, service your customers, create competitive advantage &amp; and make a real difference to the lives of the people that you work with">
-  <title>How To Offshore</title>
+  <title>How To Offshore | Your guide to getting started with offshoring operational roles</title>
 
   <meta name="keywords" content="how to offshore, vietnam bpo, philippines bpo, vietnam, philippines, change fox, offshoring, bpo">
   <meta name="author" content="Change Fox Pty. Ltd.">
@@ -13,12 +13,12 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@howtooffshore" />
-  <meta name="twitter:title" content="How To Offshore" />
+  <meta name="twitter:title" content="How To Offshore | Your guide to getting started with offshoring operational roles" />
   <meta name="twitter:description" content="Offshoring is a great way to reduce costs, increase diversity, service your customers, create competitive advantage &amp; and make a real difference to the lives of the people that you work with" />
   <meta name="twitter:image" content="https://www.howtooffshore.com/assets/img/brand/default-image.png" />
 
   <!-- OG -->
-  <meta property="og:title" content="How To Offshore"/>
+  <meta property="og:title" content="How To Offshore | Your guide to getting started with offshoring operational roles"/>
   <meta property="og:image" content="https://www.howtooffshore.com/assets/img/brand/default-image.png"/>
   <meta property="og:site_name" content="How To Offshore"/>
   <meta property="og:description" content="Offshoring is a great way to reduce costs, increase diversity, service your customers, create competitive advantage &amp; and make a real difference to the lives of the people that you work with"/>
