--- a/public/index.html
+++ b/public/index.html
@@ -757,7 +757,9 @@
         <div class="row row-grid align-items-center">
           <div class="col-md-6 order-lg-2 ml-lg-auto">
             <div class="position-relative pl-md-5">
-              <img src="./assets/img/ill/ill-2.svg" class="img-center img-fluid">
+              <!-- <img src="./assets/img/ill/ill-2.svg" class="img-center img-fluid"> -->
+              <img src="./assets/img/ill/undraw_connecting_teams3_1pgn.svg" class="img-center img-fluid">
+              <!-- <img src="./assets/img/ill/undraw_scrum_board_cesn.svg" class="img-center img-fluid"> -->
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
