--- a/public/index.html
+++ b/public/index.html
@@ -234,22 +234,43 @@
                       </p>
       
                       <div class="nav-wrapper">
+
                         <ul class="nav nav-pills nav-fill flex-column flex-md-row" id="tabs-text" role="tablist">
+
                           <li class="nav-item">
-                            <a class="nav-link mb-sm-3 mb-md-0 active" id="tabs-text-1-tab" data-toggle="tab" href="#tabs-text-1" role="tab" aria-controls="tabs-text-1" aria-selected="true">Vietnam</a>
+                            <a class="nav-link mb-sm-3 mb-md-0 active" id="tabs-text-1-tab" data-toggle="tab" href="#tabs-text-1" role="tab" aria-controls="tabs-text-1" aria-selected="true">Philippines</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-2-tab" data-toggle="tab" href="#tabs-text-2" role="tab" aria-controls="tabs-text-2" aria-selected="false">Philippines</a>
-                          </li>
+                              <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-2-tab" data-toggle="tab" href="#tabs-text-2" role="tab" aria-controls="tabs-text-2" aria-selected="false">Vietnam</a>
+                            </li>
                           <li class="nav-item">
                             <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-3-tab" data-toggle="tab" href="#tabs-text-3" role="tab" aria-controls="tabs-text-3" aria-selected="false">Others</a>
                           </li>
+
                         </ul>
+
                       </div>
                       <div class="card">
                         <div class="card-body">
                           <div class="tab-content text-black" id="myTabContent">
-                            <div class="tab-pane fade show active text-black" id="tabs-text-1" role="tabpanel" aria-labelledby="tabs-text-1-tab">
+
+                            <div class="tab-pane fade show active" id="tabs-text-1" role="tabpanel" aria-labelledby="tabs-text-1-tab">
+                                <p>
+                                  <img class="img-fluid rounded" src="./assets/img/theme/philippines_manila.jpg">
+                                </p>
+                                <p class="text-default">
+                                  The Philippines has a history of western "integration" that is a strength in terms of cultural appreciation
+                                  and English proficiency. Further, the countries recent development has been largely fuelled by the BPO industry
+                                  with a reporting 60% of registered businesses working in, or servicing the industry.
+                                </p>
+                                <p class="text-default">
+                                  Some of the worlds largest call centers are either headquartered or serviced from the Philippines with over
+                                  one million jobs in the industry, primarily in call centers, but reports also suggest that the industry is
+                                  someone stagnant with growth numbers levelling out in recent years.
+                                </p>
+                            </div>
+
+                            <div class="tab-pane fade text-black" id="tabs-text-2" role="tabpanel" aria-labelledby="tabs-text-2-tab">
                                 <p>
                                   <img class="img-fluid rounded" src="./assets/img/theme/vietnam_halonbay.jpg">
                                 </p>
@@ -267,21 +288,7 @@
                                   </a>
                                 </p>
                             </div>
-                            <div class="tab-pane fade" id="tabs-text-2" role="tabpanel" aria-labelledby="tabs-text-2-tab">
-                                <p>
-                                  <img class="img-fluid rounded" src="./assets/img/theme/philippines_manila.jpg">
-                                </p>
-                                <p class="text-default">
-                                  The Philippines has a history of western "integration" that is a strength in terms of cultural appreciation
-                                  and English proficiency. Further, the countries recent development has been largely fuelled by the BPO industry
-                                  with a reporting 60% of registered businesses working in, or servicing the industry.
-                                </p>
-                                <p class="text-default">
-                                  Some of the worlds largest call centers are either headquartered or serviced from the Philippines with over
-                                  one million jobs in the industry, primarily in call centers, but reports also suggest that the industry is
-                                  someone stagnant with growth numbers levelling out in recent years.
-                                </p>
-                            </div>
+
                             <div class="tab-pane fade" id="tabs-text-3" role="tabpanel" aria-labelledby="tabs-text-3-tab">
                                 <p class="text-default">
                                   There are clearly other regions and countries such as South America, Africa, Eastern Europe but from our experience
