--- a/public/index.html
+++ b/public/index.html
@@ -1272,6 +1272,7 @@
       </div>
     </div>
   </footer>
+
   <input id="name" name="name" value="" type="hidden">
   <input id="company" name="company" value="" type="hidden">
   <input id="email" name="email" value="" type="hidden">
@@ -1305,6 +1306,14 @@
       backDelay: 1500,
       showCursor: false,
     });
+  </script>
+
+  <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+  <script>
+  hbspt.forms.create({
+      portalId: "5303394",
+      formId: "a7d42a42-430b-4f5e-8401-2b4246dbcad9"
+  });
   </script>
 
   <script src="./assets/js/jqBootstrapValidation.js"></script>
