--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
       display:none;
     }
   </style>
+
 </head>
 
 <body>
@@ -1297,6 +1298,10 @@
   <!-- Argon JS -->
   <script src="./assets/js/argon.js?v=1.0.1"></script>
 
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/5303394.js"></script>
+  <!-- End of HubSpot Embed Code -->
+
   <script>
     var typed = new Typed('.u-text-animation.u-text-animation--typing', {
       stringsElement: '#typed-strings',
@@ -1306,14 +1311,6 @@
       backDelay: 1500,
       showCursor: false,
     });
-  </script>
-
-  <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
-  <script>
-  hbspt.forms.create({
-      portalId: "5303394",
-      formId: "a7d42a42-430b-4f5e-8401-2b4246dbcad9"
-  });
   </script>
 
   <script src="./assets/js/jqBootstrapValidation.js"></script>
